testsuite/tests/tool-toplevel/redefinition_hints.compilers.reference
Line 23, characters 0-23:
23 | module type S = sig end
     ^^^^^^^^^^^^^^^^^^^^^^^
Error: Multiple definition of the module type name "S".
       Names must be unique in a given structure or signature.
Line 4, characters 0-4:
4 | type a = A
    ^^^^
Error: Syntax error
Line 2, characters 0-1:
2 | a = b;;
    ^
Error: Unbound value "a"
Line 2, characters 0-1:
2 | a = c;;
    ^
Error: Unbound value "a"
Line 2, characters 0-1:
2 | b = c;;
    ^
Error: Unbound value "b"


Line 3, characters 0-0:
Error: Syntax error

